--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/bootstrap"]
 	path = src/bootstrap
 	url = https://github.com/twitter/bootstrap.git
+[submodule "src/django-pipeline"]
+	path = src/django-pipeline
+	url = git://github.com/tylerball/django-pipeline.git
